# vec

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  build.sh  patch-thirdpaty.sh  robin-map.patch
bench/: CMakeLists.txt
bench/include/: bench-descriptor.h  bench-operator.h  bench-profile.h  bench-state.h  data_gen.hpp  range.h  status.h  string_utils.hpp  types.hpp
bench/src/: bench-descriptor.cc  types.cc
bench/test/: basic-test.cc  string-util-test.cc
core/: CMakeLists.txt
core/include/vec/: binary_vec.h  slice.h  vec.h  vec_iterator.h  vec_string.h
core/src/: vec.cc
docker/: Dockerfile
include/vec/: vec.h  vec_string.h
java/: CMakeLists.txt  bench-test.cpp  jni_test.cpp
java/load/: Hello2.java  HelloAdd.java  HelloBoxAdd.java  InvokeMethod.java
java/load/cc/stdpain/: Hello2.java  Hello3.java
lua/: CMakeLists.txt  lua_test.cpp
lua/lua/: CMakeLists.txt
note/: opt_record.md
openmp/: CMakeLists.txt
openmp/src/: test_parallel.cpp
parallel/: CMakeLists.txt
parallel/src/queue/: bench_ring_buffer.cpp  ring_buffer.h  test_ring_buffer.cpp
test/: CMakeLists.txt  simd_test.cpp  test.cpp  test_decimal_converter.cpp  test_sse_memcmp.cpp
test/bench/: avx512_ht.cpp  bench_binarycolumn.cpp  bench_count_zero.cpp  bench_create_timer.cpp  bench_decimal_convert.cpp  bench_filter.cpp  bench_fnv.cpp  bench_function_call.cpp  bench_gather.cpp  bench_histogram.cpp  bench_link.cpp  bench_map.cpp  bench_mem_access.cpp  bench_memcmp.cpp  bench_pause.cpp  bench_selection.cpp  bench_str2date.cpp  bench_sum_group_by.cpp  call.cpp
